# bioconcord

./: README.md  pyproject.toml  setup.py
Src/.ipynb_checkpoints/: __init__-checkpoint.py
Src/bioconcord/: __init__.py  testGeneProgramsConcordance.py
Src/bioconcord/.ipynb_checkpoints/: __init__-checkpoint.py
Src/utils/: __init__.py  libraries.py
Src/utils/.ipynb_checkpoints/: logger-checkpoint.py
docs/: conf.py  index.rst  make.bat
examples/: EvaluateGenePrograms.ipynb
examples/TextFiles/: GeneClusters_rpe1.csv
tests/: test_core.py
